@@ -1,22 +1,21 @@
-package com.tom.GestionBieres.Service;
+package com.tom.GestionBieres.Service.Impl;
 
-import com.tom.GestionBieres.Exception.RessourceNotFoundException;
 import com.tom.GestionBieres.Mapper.ArticleMapper;
+import com.tom.GestionBieres.Service.ArticleService;
 import com.tom.GestionBieres.entity.Article;
 import com.tom.GestionBieres.entity.Marque;
 import com.tom.GestionBieres.entityDto.ArticleDto;
+import com.tom.GestionBieres.exception.MarqueNotFoundException;
 import com.tom.GestionBieres.repository.ArticleRepository;
 import com.tom.GestionBieres.repository.MarqueRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class ArticleServiceImpl implements GestionBiereService<ArticleDto> {
+public class ArticleServiceImpl implements ArticleService {
 
     private ArticleRepository articleRepository;
     private MarqueRepository marqueRepository;
@@ -24,8 +23,7 @@ public class ArticleServiceImpl implements GestionBiereService<ArticleDto> {
     @Override
     public List<ArticleDto> findAll() {
         List <Article> articles = this.articleRepository.findAll();
-        return articles.stream().map(article->
-                ArticleMapper.mapToArticleDto(article)).collect(Collectors.toList());
+        return articles.stream().map(ArticleMapper::mapToArticleDto).toList();
     }
 
     public ArticleDto loadByNameAndVolume(String name,int volume){
@@ -33,9 +31,9 @@ public class ArticleServiceImpl implements GestionBiereService<ArticleDto> {
     }
 
     public List<ArticleDto> getAllArticleByMarque (Long idMarque){
-        Marque marque = this.marqueRepository.findById(idMarque).orElseThrow(()->new RessourceNotFoundException("Marque non existante"));
+        Marque marque = this.marqueRepository.findById(idMarque).orElseThrow(()->new MarqueNotFoundException("Marque non existante"));
         List<Article> articles = this.articleRepository.findAllArticleByMarque(marque);
-        return articles.stream().map(article->ArticleMapper.mapToArticleDto(article)).collect(Collectors.toList());
+        return articles.stream().map(ArticleMapper::mapToArticleDto).toList();
     }
 
 
