@@ -1,6 +1,7 @@
-package com.tom.GestionBieres.Service;
+package com.tom.GestionBieres.Service.Impl;
 
 import com.tom.GestionBieres.Mapper.ContinentMapper;
+import com.tom.GestionBieres.Service.ContinentService;
 import com.tom.GestionBieres.entity.Continent;
 import com.tom.GestionBieres.entityDto.ContinentDto;
 import com.tom.GestionBieres.repository.ContinentRepository;
@@ -8,17 +9,18 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class ContinentServiceImpl implements GestionBiereService<ContinentDto>{
+public class ContinentServiceImpl implements ContinentService {
 
     private ContinentRepository continentRepository;
+
+
+
     @Override
     public List<ContinentDto> findAll() {
         List<Continent> continents =this.continentRepository.findAll();
-        return continents.stream().map(continent->
-                ContinentMapper.mapToContinentDto(continent)).collect(Collectors.toList());
+        return continents.stream().map(ContinentMapper::mapToContinentDto).toList();
     }
 }
