@@ -1,6 +1,7 @@
-package com.tom.GestionBieres.Service;
+package com.tom.GestionBieres.Service.Impl;
 
 import com.tom.GestionBieres.Mapper.FabricantMapper;
+import com.tom.GestionBieres.Service.FabricantService;
 import com.tom.GestionBieres.entity.Fabricant;
 import com.tom.GestionBieres.entityDto.FabricantDto;
 import com.tom.GestionBieres.repository.FabricantRepository;
@@ -8,17 +9,17 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class FabricantServiceImpl implements GestionBiereService<FabricantDto>{
+public class FabricantServiceImpl implements FabricantService {
 
     private FabricantRepository fabricantRepository;
+
+
     @Override
     public List<FabricantDto> findAll() {
         List<Fabricant> fabricants = this.fabricantRepository.findAll();
-        return fabricants.stream().map(fabricant->
-                FabricantMapper.mapToFabricantDto(fabricant)).collect(Collectors.toList());
+        return fabricants.stream().map(FabricantMapper::mapToFabricantDto).toList();
     }
 }
