@@ -1,6 +1,7 @@
-package com.tom.GestionBieres.Service;
+package com.tom.GestionBieres.Service.Impl;
 
 import com.tom.GestionBieres.Mapper.TypeBiereMapper;
+import com.tom.GestionBieres.Service.TypeBiereService;
 import com.tom.GestionBieres.entity.Typebiere;
 import com.tom.GestionBieres.entityDto.TypebiereDto;
 import com.tom.GestionBieres.repository.TypeBiereRepository;
@@ -8,17 +9,17 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class TypeBiereServiceImpl implements GestionBiereService<TypebiereDto>{
+public class TypeBiereServiceImpl implements TypeBiereService {
 
     private TypeBiereRepository typeBiereRepository;
+
+
     @Override
     public List<TypebiereDto> findAll() {
         List<Typebiere> types = this.typeBiereRepository.findAll();
-        return types.stream().map(type->
-                TypeBiereMapper.mapToTypeBiereDto(type)).collect(Collectors.toList());
+        return types.stream().map(TypeBiereMapper::mapToTypeBiereDto).toList();
     }
 }
